force-app/main/default/objects/Contact/fields/DEL_LPCR_StatutPreinscription__c.field-meta.xml
<CustomField>
    <fullName>DEL_LPCR_StatutPreinscription__c</fullName>
    <label>DEL Statut (Préinscription)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nouveau</fullName>
            </value>
            <value>
                <fullName>Option</fullName>
            </value>
            <value>
                <fullName>Recommandation</fullName>
            </value>
            <value>
                <fullName>Recommandation validée</fullName>
            </value>
            <value>
                <fullName>Attribuée</fullName>
            </value>
            <value>
                <fullName>Confirmé</fullName>
            </value>
            <value>
                <fullName>Inscrit</fullName>
            </value>
            <value>
                <fullName>Annulé</fullName>
            </value>
            <value>
                <fullName>Liste d’attente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>