force-app/main/default/objects/Contact/fields/Index_Enfant__c.field-meta.xml
<CustomField>
    <fullName>Index_Enfant__c</fullName>
    <label>Index Enfant</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>