force-app/main/default/objects/Contact/fields/LPCR_AccountIdExterne__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AccountIdExterne__c</fullName>
    <label>Id Externe</label>
    <length>20</length>
    <type>Text</type>
</CustomField>