force-app/main/default/objects/Contact/fields/LPCR_AccueilPreinscription__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AccueilPreinscription__c</fullName>
    <label>Type d&apos;accueil (Préinscription)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Régulier</fullName>
            </value>
            <value>
                <fullName>Occasionnel</fullName>
            </value>
            <value>
                <fullName>Urgent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>