force-app/main/default/objects/Contact/fields/LPCR_Actif__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Actif__c</fullName>
    <defaultValue>false</defaultValue>
    <description>champ permettant de marquer un contact comme Actif ou inactif (intégration avec Intranet)</description>
    <label>Actif</label>
    <type>Checkbox</type>
</CustomField>