force-app/main/default/objects/Contact/fields/LPCR_AddresseComplementaire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AddresseComplementaire__c</fullName>
    <label>Adresse complémentaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>