force-app/main/default/objects/Contact/fields/LPCR_AffichageFacture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AffichageFacture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Affichage facture</label>
    <type>Checkbox</type>
</CustomField>