force-app/main/default/objects/Contact/fields/LPCR_AllocataireCAF__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AllocataireCAF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allocataire CAF</label>
    <type>Checkbox</type>
</CustomField>