force-app/main/default/objects/Contact/fields/LPCR_ANaitre__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ANaitre__c</fullName>
    <description>vrai si date de naissance dans le futur</description>
    <formula>AND(Birthdate&gt;TODAY(),RecordType.DeveloperName=&quot;Enfant&quot;)</formula>
    <label>A naitre</label>
    <type>Checkbox</type>
</CustomField>