force-app/main/default/objects/Contact/fields/LPCR_AQuitteEntreprise__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AQuitteEntreprise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A quitté l&apos;entreprise</label>
    <type>Checkbox</type>
</CustomField>