force-app/main/default/objects/Contact/fields/LPCR_AutoriseChercherEnfant__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AutoriseChercherEnfant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autorisé à venir chercher l&apos;enfant</label>
    <type>Checkbox</type>
</CustomField>