force-app/main/default/objects/Contact/fields/LPCR_AutoriteParentale__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AutoriteParentale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autorité parentale</label>
    <type>Checkbox</type>
</CustomField>