force-app/main/default/objects/Contact/fields/LPCR_ContactAEnvoyer__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactAEnvoyer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact A Envoyer</label>
    <type>Checkbox</type>
</CustomField>