force-app/main/default/objects/Contact/fields/LPCR_CrechePreinscription__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CrechePreinscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Crèche (Préinscription)</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Merci de sélectionner un compte avec un record type de &quot;Crèche&quot;</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Crèche, Crèche Externe</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>