force-app/main/default/objects/Contact/fields/LPCR_DateEntreeCrecheSouhaitee__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateEntreeCrecheSouhaitee__c</fullName>
    <label>Date d&#39;entrée en crèche souhaitée</label>
    <type>Date</type>
</CustomField>