force-app/main/default/objects/Contact/fields/LPCR_DatePreinscription__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DatePreinscription__c</fullName>
    <label>Date de préinscription</label>
    <type>Date</type>
</CustomField>