force-app/main/default/objects/Contact/fields/LPCR_DateTerme__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateTerme__c</fullName>
    <label>Date terme estimée</label>
    <type>Date</type>
</CustomField>