force-app/main/default/objects/Contact/fields/LPCR_Decisionnaire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Decisionnaire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Décisionnaire</label>
    <type>Checkbox</type>
</CustomField>