force-app/main/default/objects/Contact/fields/LPCR_Departement__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Departement__c</fullName>
    <formula>IF(BEGINS(MailingPostalCode,&#39;97&#39;),LEFT(MailingPostalCode,3),LEFT(MailingPostalCode,2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Département</label>
    <type>Text</type>
</CustomField>