force-app/main/default/objects/Contact/fields/LPCR_DesisncriptionNewsletter__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DesisncriptionNewsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Désinscription newsletter</label>
    <type>Checkbox</type>
</CustomField>