force-app/main/default/objects/Contact/fields/LPCR_DetailHandicap__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DetailHandicap__c</fullName>
    <label>Détail Handicap</label>
    <length>255</length>
    <type>Text</type>
</CustomField>