force-app/main/default/objects/Contact/fields/LPCR_EmailVerifie__c.field-meta.xml
<CustomField>
    <fullName>LPCR_EmailVerifie__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email vérifié</label>
    <type>Checkbox</type>
</CustomField>