force-app/main/default/objects/Contact/fields/LPCR_EstMigre__c.field-meta.xml
<CustomField>
    <fullName>LPCR_EstMigre__c</fullName>
    <label>Est migré</label>
    <length>180</length>
    <type>Text</type>
</CustomField>