force-app/main/default/objects/Contact/fields/LPCR_Fonction__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Fonction__c</fullName>
    <label>Fonction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Président</fullName>
            </value>
            <value>
                <fullName>Directeur général</fullName>
            </value>
            <value>
                <fullName>Directeur général adjoint</fullName>
            </value>
            <value>
                <fullName>Directeur des opérations</fullName>
            </value>
            <value>
                <fullName>Secrétaire général</fullName>
            </value>
            <value>
                <fullName>Gérant</fullName>
            </value>
            <value>
                <fullName>Associé</fullName>
            </value>
            <value>
                <fullName>Directeur de division, business unit ou filiale</fullName>
            </value>
            <value>
                <fullName>Directeur régional</fullName>
            </value>
            <value>
                <fullName>Directeur international</fullName>
            </value>
            <value>
                <fullName>Assistante de Direction</fullName>
            </value>
            <value>
                <fullName>Directeur achats</fullName>
            </value>
            <value>
                <fullName>Responsable achats</fullName>
            </value>
            <value>
                <fullName>Assistant achats</fullName>
            </value>
            <value>
                <fullName>Directeur des services généraux</fullName>
            </value>
            <value>
                <fullName>Responsable des services généraux</fullName>
            </value>
            <value>
                <fullName>Directeur des ressources humaines</fullName>
            </value>
            <value>
                <fullName>Directeur développement RH</fullName>
            </value>
            <value>
                <fullName>Directeur recrutement</fullName>
            </value>
            <value>
                <fullName>Directeur relations sociales</fullName>
            </value>
            <value>
                <fullName>Directeur de l&apos;actions sociale</fullName>
            </value>
            <value>
                <fullName>Directeur formation</fullName>
            </value>
            <value>
                <fullName>Directeur Gestion des carrières</fullName>
            </value>
            <value>
                <fullName>Responsable ressources humaines</fullName>
            </value>
            <value>
                <fullName>Responsable développement RH</fullName>
            </value>
            <value>
                <fullName>Responsable recrutement</fullName>
            </value>
            <value>
                <fullName>Responsable rémunération</fullName>
            </value>
            <value>
                <fullName>Responsable relations sociales</fullName>
            </value>
            <value>
                <fullName>Responsable de l&apos;actions sociale</fullName>
            </value>
            <value>
                <fullName>Responsable formation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>