force-app/main/default/objects/Contact/fields/LPCR_Genre__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Genre__c</fullName>
    <label>Genre</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>