force-app/main/default/objects/Contact/fields/LPCR_Handicape__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Handicape__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handicapé</label>
    <type>Checkbox</type>
</CustomField>