force-app/main/default/objects/Contact/fields/LPCR_HeureDebutJeudi__c.field-meta.xml
<CustomField>
    <fullName>LPCR_HeureDebutJeudi__c</fullName>
    <label>Heure de début jeudi</label>
    <type>Time</type>
</CustomField>