force-app/main/default/objects/Contact/fields/LPCR_HeureDebutLundi__c.field-meta.xml
<CustomField>
    <fullName>LPCR_HeureDebutLundi__c</fullName>
    <label>Heure de début lundi</label>
    <type>Time</type>
</CustomField>