force-app/main/default/objects/Contact/fields/LPCR_HeureFinMardi__c.field-meta.xml
<CustomField>
    <fullName>LPCR_HeureFinMardi__c</fullName>
    <label>Heure de fin mardi</label>
    <type>Time</type>
</CustomField>