force-app/main/default/objects/Contact/fields/LPCR_IdExterne_Contact__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExterne_Contact__c</fullName>
    <externalId>true</externalId>
    <label>ID externe</label>
    <length>180</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>