force-app/main/default/objects/Contact/fields/LPCR_IdExterne_Hierarchique__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExterne_Hierarchique__c</fullName>
    <label>Id Externe Hierarchique</label>
    <length>50</length>
    <type>Text</type>
</CustomField>