force-app/main/default/objects/Contact/fields/LPCR_IdPourLienFacture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdPourLienFacture__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Id Lien Sponsor Facture</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>DevisSponsor</relationshipLabel>
    <relationshipName>DevisSponsor1</relationshipName>
    <type>Lookup</type>
</CustomField>