force-app/main/default/objects/Contact/fields/LPCR_Index_Enfant__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Index_Enfant__c</fullName>
    <label>Index Enfant</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>