force-app/main/default/objects/Contact/fields/LPCR_InterlocuteurPrivilegie__c.field-meta.xml
<CustomField>
    <fullName>LPCR_InterlocuteurPrivilegie__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interlocuteur privilégié</label>
    <type>Checkbox</type>
</CustomField>