force-app/main/default/objects/Contact/fields/LPCR_Metier__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Metier__c</fullName>
    <label>Métier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASPE</fullName>
            </value>
            <value>
                <fullName>ARCHITECTES SALARIÉS</fullName>
            </value>
            <value>
                <fullName>AUXILIAIRE DE PUERICULTURE</fullName>
            </value>
            <value>
                <fullName>CAD. ORGANISATION OU DU CONTRÔLE</fullName>
            </value>
            <value>
                <fullName>CAD.CHARGÉ ÉTUDES ECO/FIN/CIALES</fullName>
            </value>
            <value>
                <fullName>CADRES REL. PUB. &amp; COMMUNICAT.</fullName>
            </value>
            <value>
                <fullName>CADRES SCES FINANC./COMPT. PME</fullName>
            </value>
            <value>
                <fullName>CADRES SPÉCIALISTES RH ET RECRUT</fullName>
            </value>
            <value>
                <fullName>CHEFS PROJETS\ RESPONS. INFORM.</fullName>
            </value>
            <value>
                <fullName>CIAUX &amp; TC REP. EN BIENS CONSOM</fullName>
            </value>
            <value>
                <fullName>CIAUX &amp; TC REP. EN SERVICES</fullName>
            </value>
            <value>
                <fullName>CONCEPT.&amp;ASSIST.TECHN.ART GRAPH</fullName>
            </value>
            <value>
                <fullName>DIR.CENTRE SOCIOCULTUR&amp;LOISIRS</fullName>
            </value>
            <value>
                <fullName>EJE</fullName>
            </value>
            <value>
                <fullName>EDUCATEURS SPÉCIALISÉS</fullName>
            </value>
            <value>
                <fullName>ING.&amp;CAD.MÉTHODES DE PROD.</fullName>
            </value>
            <value>
                <fullName>JURISTES</fullName>
            </value>
            <value>
                <fullName>MANUTENTIONNAIRES NON QUALIFIÉS</fullName>
            </value>
            <value>
                <fullName>MEDECIN</fullName>
            </value>
            <value>
                <fullName>MONTEURS\ METTEUR POINT TQUAL</fullName>
            </value>
            <value>
                <fullName>OUV.QUAL. MANUTENTION\ CARISTES</fullName>
            </value>
            <value>
                <fullName>PUÉRICULTRICES</fullName>
            </value>
            <value>
                <fullName>RESP.D&apos;ENTREPOT\ DE MAGASINAGE</fullName>
            </value>
            <value>
                <fullName>SECRÉTAIRES</fullName>
            </value>
            <value>
                <fullName>TECHN.LOGIST.PLANNING\ORDONN.</fullName>
            </value>
            <value>
                <fullName>AIDE AUXILIAIRE</fullName>
            </value>
            <value>
                <fullName>LINGERE</fullName>
            </value>
            <value>
                <fullName>DIRECTEUR DE CRECHE</fullName>
            </value>
            <value>
                <fullName>DIRECTEUR ADJOINT</fullName>
            </value>
            <value>
                <fullName>AGENT DE PUERICULTURE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>