force-app/main/default/objects/Contact/fields/LPCR_NomEntreprise__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NomEntreprise__c</fullName>
    <label>Nom entreprise</label>
    <length>255</length>
    <type>Text</type>
</CustomField>