force-app/main/default/objects/Contact/fields/LPCR_NumeroAllocataire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NumeroAllocataire__c</fullName>
    <label>Numéro d&apos;allocataire</label>
    <length>128</length>
    <type>Text</type>
</CustomField>