force-app/main/default/objects/Contact/fields/LPCR_OffresPartFamillePetiteEnfance__c.field-meta.xml
<CustomField>
    <fullName>LPCR_OffresPartFamillePetiteEnfance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offres part. Famille &amp; Petite Enfance</label>
    <type>Checkbox</type>
</CustomField>