force-app/main/default/objects/Contact/fields/LPCR_OptinEmailCom__c.field-meta.xml
<CustomField>
    <fullName>LPCR_OptinEmailCom__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Accepte de recevoir des emails des communications</description>
    <label>Accepte e-mails et communications</label>
    <type>Checkbox</type>
</CustomField>