force-app/main/default/objects/Contact/fields/LPCR_PrecisionAutreSituationPro__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PrecisionAutreSituationPro__c</fullName>
    <label>Précision autre situation pro.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>