force-app/main/default/objects/Contact/fields/LPCR_PreinscriptionStatut__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PreinscriptionStatut__c</fullName>
    <label>Statut (Préinscription)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LPCR_StatutInscription</valueSetName>
    </valueSet>
</CustomField>