force-app/main/default/objects/Contact/fields/LPCR_ProtocoleMedical__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ProtocoleMedical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Protocole médical</label>
    <type>Checkbox</type>
</CustomField>