force-app/main/default/objects/Contact/fields/LPCR_Rattachement__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Rattachement__c</fullName>
    <label>Rattachement collaborateur</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Siège</fullName>
            </value>
            <value>
                <fullName>Crèche</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>