force-app/main/default/objects/Contact/fields/LPCR_RecordType__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RecordType__c</fullName>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enfant</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Famille</fullName>
            </value>
            <value>
                <fullName>Gestionnaire</fullName>
            </value>
            <value>
                <fullName>Entreprise</fullName>
            </value>
            <value>
                <fullName>Collaborateur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>