force-app/main/default/objects/Contact/fields/LPCR_Representant1__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Representant1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Représentant 1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Parent</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enfant</relationshipLabel>
    <relationshipName>LPCR_Representant1</relationshipName>
    <type>Lookup</type>
</CustomField>