force-app/main/default/objects/Contact/fields/LPCR_Role__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Role__c</fullName>
    <label>Rôle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact PM</fullName>
            </value>
            <value>
                <fullName>Contact Inscription</fullName>
            </value>
            <value>
                <fullName>Représentant</fullName>
            </value>
            <value>
                <fullName>Comptabilité</fullName>
            </value>
            <value>
                <fullName>Contact Achat PO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>