force-app/main/default/objects/Contact/fields/LPCR_Signataire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Signataire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signataire</label>
    <type>Checkbox</type>
</CustomField>