force-app/main/default/objects/Contact/fields/LPCR_SituationProfessionnelle__c.field-meta.xml
<CustomField>
    <fullName>LPCR_SituationProfessionnelle__c</fullName>
    <label>Situation professionnelle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En activité professionnelle</fullName>
            </value>
            <value>
                <fullName>En formation</fullName>
            </value>
            <value>
                <fullName>Étudiant</fullName>
            </value>
            <value>
                <fullName>En recherche d&apos;emploi</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>