force-app/main/default/objects/Contact/fields/LPCR_SourceMigration__c.field-meta.xml
<CustomField>
    <fullName>LPCR_SourceMigration__c</fullName>
    <label>Source Migration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LPCR_SourceMigration</valueSetName>
    </valueSet>
</CustomField>