force-app/main/default/objects/Contact/fields/LPCR_StatutPreinscription__c.field-meta.xml
<CustomField>
    <fullName>LPCR_StatutPreinscription__c</fullName>
    <label>Statut (Préinscription)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nouveau</fullName>
            </value>
            <value>
                <fullName>Liste attente</fullName>
                <label>Liste d’attente</label>
            </value>
            <value>
                <fullName>Option</fullName>
            </value>
            <value>
                <fullName>Recommandation</fullName>
            </value>
            <value>
                <fullName>Recommandation validée</fullName>
            </value>
            <value>
                <fullName>Attribuée</fullName>
            </value>
            <value>
                <fullName>Confirmé</fullName>
            </value>
            <value>
                <fullName>Inscrit</fullName>
            </value>
            <value>
                <fullName>Annulé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>