force-app/main/default/objects/Contact/fields/LPCR_TypeAllocataire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeAllocataire__c</fullName>
    <label>Type d&#39;allocataire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CAF</fullName>
            </value>
            <value>
                <fullName>MSA</fullName>
            </value>
            <value>
                <fullName>SNCF</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>