force-app/main/default/objects/Contact/fields/LPCR_TypeContactDetaille__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeContactDetaille__c</fullName>
    <label>Type de contact détaillé</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Père</fullName>
            </value>
            <value>
                <fullName>Mère</fullName>
            </value>
            <value>
                <fullName>Grand père</fullName>
            </value>
            <value>
                <fullName>Grand-mère</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>