force-app/main/default/objects/Contact/fields/LPCR_VIP__c.field-meta.xml
<CustomField>
    <fullName>LPCR_VIP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VIP</label>
    <type>Checkbox</type>
</CustomField>