force-app/main/default/objects/Contact/fields/Tech_ContactURL__c.field-meta.xml
<CustomField>
    <fullName>Tech_ContactURL__c</fullName>
    <formula>LEFT($Api.Enterprise_Server_URL_490,FIND(&apos;/services&apos;,$Api.Enterprise_Server_URL_490))&amp;CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Contact URL</label>
    <type>Text</type>
</CustomField>