force-app/main/default/objects/Contact/recordTypes/Collaborateur.recordType-meta.xml
<RecordType>
    <fullName>Collaborateur</fullName>
    <active>true</active>
    <label>Collaborateur</label>
</RecordType>