force-app/main/default/objects/Contact/recordTypes/Enfant.recordType-meta.xml
<RecordType>
    <fullName>Enfant</fullName>
    <active>true</active>
    <label>Enfant</label>
</RecordType>